--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: Lato;
 }
 
@@ -8,7 +8,6 @@ body{
     background: #E55473;
     padding: 20px 43px;
     color: #FFF;
-    font-family: Lato;
     font-size: 20px;
     font-weight: 700;
 }
@@ -39,6 +38,35 @@ header {
     font-weight: 400;
 }
 
-#banner-button{
+#banner-button {
     padding-bottom: 160px;
+}
+
+/* Hot deal section styles */
+.hot-deal-section {
+    display: flex;
+    gap: 220px;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+}
+
+.hot-deal-text {
+    padding-left: 240px;
+}
+
+.hot-deal-title {
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.hot-deal-paragraph {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.hot-deal-image {
+    padding-right: 240px;
 }
