--- a/styles/flower.css
+++ b/styles/flower.css
@@ -70,3 +70,27 @@ header {
 .hot-deal-image {
     padding-right: 240px;
 }
+
+/* flower gallery section styles */
+.setion-text {
+    padding-left: 240px;
+}
+
+.section-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.section-paragraph {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.flower-gallery {
+    padding-left: 240px;
+    padding-right: 240px;
+}
